# ai-companion-agent-connector

./: main.py  pyproject.toml
src/ai_companion_agent/: __init__.py
src/ai_companion_agent/crewai/: __init__.py
src/ai_companion_agent/langchain/: __init__.py
src/ai_companion_agent/mcp/: __init__.py  manager.py  models.py  oauth.py
src/ai_companion_agent/openai/: __init__.py
src/ai_companion_agent/smolagents/: __init__.py
